feat: update kitty.conf and simplify tab_bar.py
- Added navigation key mappings and font configurations in kitty.conf
- Enhanced cursor, mouse, and window settings in kitty.conf
- Updated tab bar appearance and shell settings in kitty.conf
- Removed unused imports and functions in tab_bar.py
- Simplified draw_tab and draw_right_status functions in tab_bar.py

--- a/kitty.conf
+++ b/kitty.conf
@@ -1,10 +1,168 @@
+# Navigation
+
+map ctrl+tab next_tab
+map ctrl+shift+tab previous_tab
+map ctrl+shift+1 goto_tab 1
+map ctrl+shift+2 goto_tab 2
+map ctrl+shift+3 goto_tab 3
+map ctrl+shift+4 goto_tab 4
+map ctrl+shift+5 goto_tab 5
+
+# Fonts 
+
+font_family                     JetBrainsMono Nerd Font Mono Regular
+bold_font                       JetBrainsMono Nerd Font Mono ExtraBold
+italic_font                     JetBrainsMono Nerd Font Mono Italic
+bold_italic_font                JetBrainsMono Nerd Font Mono ExtraBold Italic
+modify_font                     underline_position 150%
+modify_font                     underline_thickness 1.05
+modify_font                     cell_height 110%
 font_size 12.0
+
+# disable ligatures when the cursor is over them so they are easier to edit
+disable_ligatures               cursor
+force_ltr yes
+
+# cursor
+cursor                          none
+# The cursor shape can be one of (block, beam, underline)
+# cursor_shape     block
+cursor_trail 3
+cursor_stop_blinking_after      10.0
+pointer_shape_when_dragging     hand
+
+# mouse 
+copy_on_select                  yes
+# -1 effectively means infinite scrollback
+scrollback_lines                20000
+# The modifiers to use rectangular selection (i.e. to select text in a
+# rectangular block with the mouse)
+# rectangle_select_modifiers ctrl+alt
+mouse_hide_wait                 15
+# Set the active window to the window under the mouse when moving the mouse around
+focus_follows_mouse             no
+# map cmd+left click to open URLs
+# mouse_map super+left release grabbed,ungrabbed mouse_handle_click link
+# mouse_map cmd+shift+left release ungrabbed pass_selection_to_program $HOME/.config/kitty/scripts/safari-with-http
+mouse_map cmd+left release ungrabbed pass_selection_to_program /usr/bin/open
+mouse_map cmd+left click grabbed,ungrabbed mouse_handle_click selection link prompt
+
+## Bells
+enable_audio_bell               no
+window_alert_on_bell            no
+visual_bell_duration            0.0
+visual_bell_color               none
+
+# windows ] 
+remember_window_size            yes
+# enabled_layouts                 tall:bias=55;tall:bias=50;full_size=1;stack;fat;grid;horizontal;split;mirrored=false;splits;
+# enabled_layouts                 tall,vertical,stack
+enabled_layouts                 splits, stack
+window_border_width             1.0
+window_margin_width             0.0
+# NOTE: t r b l
+window_padding_width            0 0 0 0
+placement_strategy              top-left
+# inactive_text_alpha             0.8
+# (static,scale,size)
+resize_draw_strategy            static
+# dim_opacity 0.90
 
 ## Tab bar
 
-tab_bar_edge bottom
-tab_bar_margin_height 5.0 0.0
 tab_bar_style custom
+tab_bar_margin_height 5.0 0.0
+tab_bar_min_tabs 2
 tab_powerline_style round
+tab_activity_symbol ◉
 tab_bar_background #003747
-tab_title_template "{fmt.fg.default}{index}"
+bell_on_tab             yes
+tab_bar_edge            top
+tab_title_template      {index}: {title}
+focus_follows_mouse     yes
+active_tab_foreground   #000
+active_tab_background   #73D216
+active_tab_font_style   italic
+inactive_tab_foreground #444
+inactive_tab_background #999
+inactive_tab_font_style normal
+
+# Shell
+
+shell                           zsh --login
+shell_integration               enabled
+allow_remote_control            yes
+# listen_on                       tcp:localhost:45876
+listen_on                       unix:/tmp/mykitty
+editor                          nvim
+term                            xterm-kitty
+single-instance                 yes
+
+
+# OS
+
+draw_minimal_borders                    yes
+hide_window_decorations                 yes
+macos_titlebar_color                    background
+macos_hide_from_tasks                   no
+macos_traditional_fullscreen            yes
+macos_quit_when_last_window_closed      yes
+macos_thicken_font                      0.25
+macos_custom_beam_cursor                yes
+macos_option_as_alt                     yes
+macos_show_window_title_in              window
+macos_colorspace                        displayp3
+
+
+# Misc
+
+confirm_os_window_close               2
+dynamic_background_opacity            yes
+# url_style can be one of: none, single, double, curly
+url_style                             curly
+#: The color and style for highlighting URLs on mouse-over. url_style
+#: can be one of: none, single, double, curly
+open_url_modifiers                    super
+#: The modifier keys to press when clicking with the mouse on URLs to
+#: open the URL
+open_url_with                         default
+#: The program with which to open URLs that are clicked on. The
+#: special value default means to use the operating system's default
+#: URL handler.
+url_prefixes                          http https file ftp
+#: The set of URL prefixes to look for when detecting a URL under the
+#: mouse cursor.
+copy_on_select                        yes
+#: Copy to clipboard or a private buffer on select. With this set to
+#: clipboard, simply selecting text with the mouse will cause the text
+#: to be copied to clipboard. Useful on platforms such as macOS that
+#: do not have the concept of primary selections. You can instead
+#: specify a name such as a1 to copy to a private kitty buffer
+#: instead. Map a shortcut with the paste_from_buffer action to paste
+#: from this private buffer. For example::
+#:     map cmd+shift+v paste_from_buffer a1
+#: Note that copying to the clipboard is a security risk, as all
+#: programs, including websites open in your browser can read the
+#: contents of the system clipboard.
+strip_trailing_spaces never
+#: Remove spaces at the end of lines when copying to clipboard. A
+#: value of smart will do it when using normal selections, but not
+#: rectangle selections. always will always do it.
+rectangle_select_modifiers ctrl+alt
+#: The modifiers to use rectangular selection (i.e. to select text in
+#: a rectangular block with the mouse)
+terminal_select_modifiers shift
+#: The modifiers to override mouse selection even when a terminal
+#: application has grabbed the mouse
+select_by_word_characters @-./_~?&=%+#
+
+sync_to_monitor yes
+visual_bell_duration 0
+background_opacity 1.0
+pointer_shape_when_dragging hand
+# How much to dim text that has the DIM/FAINT attribute set. 1.0 means no dimming and
+# 0.0 means fully dimmed (i.e. invisible).
+allow_hyperlinks yes
+close_on_child_death yes
+# clipboard_control write-clipboard write-primary read-clipboard
+clipboard_control write-clipboard write-primary read-clipboard-ask read-primary-ask
